[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/BasePlateScenes/pauseMenu.gd" type="Script" id=1]

[node name="pauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="continueButton" type="Button" parent="."]
margin_right = 125.0
margin_bottom = 20.0
text = "CONTINUE"

[node name="settingsButton" type="Button" parent="."]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 48.0
text = "SETTINGS"

[node name="menuButton" type="Button" parent="."]
margin_top = 56.0
margin_right = 125.0
margin_bottom = 76.0
text = "MENU"
